Update images with new UI and blur all PI details (#148)
* Update images with new UI and blur all PI details

* Remove typo in JDK number

* Remove typo in JDK number

* Update lab to use the new bucket

* Remove extra line